Added IC2 Classic support
Readded Electrodynamics support
Updated Industrial Reborn support
Changed how recipes are injected in order to support IC2 Classic
Changed default fluid settings to be based on the default fluid type
Nerfed some dust output amounts
Fixed IE Arc Furnace recipes not including output counts