@@ -1,7 +1,7 @@
 package thelm.jaopca.compat.immersiveengineering;
 
-import java.util.Arrays;
 import java.util.EnumSet;
+import java.util.List;
 import java.util.Set;
 import java.util.TreeSet;
 
@@ -23,7 +23,7 @@ import thelm.jaopca.utils.MiscHelper;
 @JAOPCAModule(modDependencies = "immersiveengineering")
 public class ImmersiveEngineeringNonIngotModule implements IModule {
 
-	private static final Set<String> BLACKLIST = new TreeSet<>(Arrays.asList(
+	private static final Set<String> BLACKLIST = new TreeSet<>(List.of(
 			"coal", "diamond", "emerald", "fluorite", "lapis", "quartz", "redstone"));
 
 	@Override
@@ -57,7 +57,7 @@ public class ImmersiveEngineeringNonIngotModule implements IModule {
 			ResourceLocation oreLocation = miscHelper.getTagLocation("ores", material.getName());
 			ResourceLocation extraDustLocation = miscHelper.getTagLocation("dusts", material.getExtra(1).getName());
 			ResourceLocation materialLocation = miscHelper.getTagLocation(material.getType().getFormName(), material.getName());
-			int outputCount = material.getType() != MaterialType.DUST ? 2 : 6;
+			int outputCount = material.getType() != MaterialType.DUST ? 2 : 5;
 			if(material.hasExtra(1)) {
 				helper.registerCrusherRecipe(
 						new ResourceLocation("jaopca", "immersiveengineering.ore_to_material."+material.getName()),
